<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_title" />

    <EditText
        android:id="@+id/editTextA"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:hint="@string/input_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/input_title_2" />

    <EditText
        android:id="@+id/editTextB"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="aa"
        android:inputType="numberDecimal"
        android:hint="@string/input_hint_2" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_title" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/res_title" />

</LinearLayout>